--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
-<!DOCTYPE html>
+<!--  --><!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href=".\styles\normalize.css">
+  <link rel="stylesheet" href=".\styles\style.css">
 </head>
 <body>
   <div class="page">
+    <header class="header">
+      <div class="header__logo header__logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <a class="header__link" href="#">Узнать →</a></p>
+      <div class="header__main-illustration" alt="Картина Решетникова «Опять двойка»"></div>
+      <div class="header__square-pic"></div>
+    </header>
+    <section class="description">
+      <div class="two-columns">
+        <div class="two-columns__brief">
+          <h2 class="two-columns__brief-title">Главные проблемы в обучении</h2 class="two-columns__brief-title">
+        </div>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+            Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+            но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+          <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным
+            и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </div>
+      </div>
+    </section>
+    <section class="digits">
+      <h1 class="section-title">Цифры и факты</h1>
+      <h2 class="section-subtitle">Про учёбу и мозг</h2>
+      <ul class="table">
+        <li class="table__cell">
+          <h2 class="table__heading">86 миллиардов</h2>
+          <p class="table__text">Число нейронов в мозге человека</p>
+        </li>
+        <li class="table__cell">
+          <h2 class="table__heading">2.1 миллиарда</h2>
+          <p class="table__text">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text">Всемирный Банк, 2017</p>
+        </li>
+        <li class="table__cell">
+          <h2 class="table__heading">1000 терабайт</h2>
+          <p class="table__text">Объём памяти человека</p>
+        </li>
+        <li class="table__cell">
+          <h2 class="table__heading">500 триллионов</h2>
+          <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+        </li>
+        <li class="table__cell">
+          <h2 class="table__heading">420 миллионов</h2>
+          <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          <p class="table__text">Всемирный Банк, 2017</p>
+        </li>
+        <li class="table__cell">
+          <h2 class="table__heading">17–20 лет</h2>
+          <p class="table__text">Пик обучаемости</p>
+        </li>
+        <li class="table__cell">
+          <h2 class="table__heading">1885 год</h2>
+          <p class="table__text">Открытие кривой забывания</p>
+        </li>
+        <li class="table__cell">
+          <h2 class="table__heading">1889 год</h2>
+          <p class="table__text">Открытие условного рефлекса</p>
+        </li>
+      </ul>
+    </section>
 
   </div>
 </body>
