--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="header__logo header__logo_place_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
       <a class="header__link" href="#">Узнать →</a></p>
       <div class="header__main-illustration" alt="Картина Решетникова «Опять двойка»"></div>
       <div class="header__square-pic"></div>
     </header>
+    <main class="content">
     <section class="description">
       <div class="two-columns">
         <div class="two-columns__brief">
@@ -72,7 +73,92 @@
         </li>
       </ul>
     </section>
+    <section class="feynman">
+    <h2 class="feynman__title">Метод Фейнмана</h2>
+    <p class="feynman__subtitle">Выучить и не забыть.</p>
+    <a class="feynman__link" href="#">Подробнее →</a>
+    <img class="feynman__pic" src="./images/feynman.png" alt="Ричард Фейнман"></шьп>
+    </section>
 
+    <section class="kaufman">
+      <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+      <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+      <ul class="table table_theme_dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">1</h2>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">2</h2>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">3</h2>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">4</h2>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">5</h2>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">6</h2>
+          <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">7</h2>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">8</h2>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">9</h2>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+        </li>
+        <li class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">10</h2>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+        </li>
+      </ul>
+    <div class="kaufman__triangle"></div>
+    </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">&copy Михаил Потапов</div>
+        </div>
+      <div class="footer__column footer__column_content_copyright">
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">
+              <img class="footer__social-icon"src="./images/facebook_color_white.svg">Facebook</a>
+            <a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg">ВКонтакте</a>
+            <a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg">Instagram</a>
+          </div>
+        </div>
+      </div>
+      </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
