--- a/index.html
+++ b/index.html
@@ -135,22 +135,22 @@
         </div>
         <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <nav class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
-            <a class="footer__column-link" href="#">Концепция</a>
-            <a class="footer__column-link" href="#">Наставники</a>
-          </nav>
+          <nav><ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#">Главная</a></li>
+            <li><a class="footer__column-link" href="#">Концепция</a></li>
+            <li><a class="footer__column-link" href="#">Наставники</a></li>
+          </ul></nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <nav class="footer__column-links">
-            <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Фейсбук">Facebook</a>
-            <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте</a>
-            <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Инстаграм">Instagram</a>
-          </nav>
+          <nav><ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Фейсбук">Facebook</a></li>
+            <li><a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте</a></li>
+            <li><a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Инстаграм">Instagram</a></li>
+          </ul></nav>
         </div>
       </div>
     </footer>
