--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="Книга">
             <h3 class="cards__title">Два вида внимания</h3>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="Скульптура человека в раздумьях">
@@ -60,12 +61,14 @@
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="Загадочное пространство">
             <h3 class="cards__title">Вопросы</h3>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг">
             <h3 class="cards__title">Иллюзия компетентности</h3>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
           </li>
         </ul>
       </section>
@@ -74,23 +77,23 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-        <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
-        <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
-      <div class="two-columns">
-        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
-        <div class="two-columns__main-text">
-          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя
-            законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
-            чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения
-            по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам.
-            Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
-            кому всё ясно с первого взгляда.</p>
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя
+              законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
+              чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения
+              по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам.
+              Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+              кому всё ясно с первого взгляда.</p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
@@ -144,7 +147,8 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру.
             Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся
             повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
           <p class="khan__quote-author">Джордж Лукас</p>
@@ -209,22 +213,18 @@
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav>
-          <ul class="resources__logo-zone">
-            <li><a class="resources__link" href="#">
-                <img src="./images/logo/resources-arzamas.svg"
-                  alt="Логотип Арзамас"></a></li>
-            <li><a class="resources__link" href="#">
-                <img src="./images/logo/resources-n1.svg"
-                  alt="Логотип Н плюс один"></a></li>
-            <li><a class="resources__link" href="#">
-                <img src="./images/logo/resources-strelka.svg"
-                  alt="Логотип Стрелка"></a></li>
-            <li><a class="resources__link" href="#">
-                <img src="./images/logo/resources-polka.svg"
-                  alt="Логотип Полка"></a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul class="resources__logo-zone">
+          <li><a class="resources__link" href="#">
+              <img src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"></a></li>
+          <li><a class="resources__link" href="#">
+              <img src="./images/logo/resources-n1.svg" alt="Логотип Н плюс один"></a></li>
+          <li><a class="resources__link" href="#">
+              <img src="./images/logo/resources-strelka.svg" alt="Логотип Стрелка"></a></li>
+          <li><a class="resources__link" href="#">
+              <img src="./images/logo/resources-polka.svg" alt="Логотип Полка"></a></li>
+        </ul>
+      </nav>
     </section>
 
     <footer class="footer">
